* Fixed debug output in atkTestReporter. [Patrick]
* Fixed non-object error in atkTextAttribute. [Patrick]
* Fixed example test module in atk skel. [Guido]
* Fixed "Cannot convert object to string" error in php 5.2+ in the atkDb
  testcase. [Guido]
* Fixed error in atkNode testcase ($node->m_module should be a string, not an
  object). [Guido]
* Fixed PHP Notice in atkGetUser(). [Guido]


Changed in ATK 6.0
------------------
+ Added a method to enable/disable the halt_on_error method so database
  errors can also handled by a custom errorhandler. [Wim,Martin]
+ Added atkFrontController and atkDataHolder. [Peter,Martin,Boy,Tjeerd]
+ Added wizard functionality. A wizard can be constructed containing atkNode
  classes. Class atkWizard supports all atkActions but it is mainly tested
  for add, edit and admin actions. [Maurice]
+ Added class atkController which controls which page to load and the sending
  of post and get vars. Several methods from atkNode have been moved to this
  class. Most importantly, methods for dispatching, page rendering and url
  creating are moved. [Maurice, Lineke]
+ Added getPostVar function which simply returns the _REQUEST params array
  or a specific param when a key is given as parameter. [Maurice]
+ Added atkWizardController class which is responsable for typical
  control actions for nodes being used with atkWizard. [Maurice]
+ Added member var m_renderBoxVars to atkActionHandler which is an array
+ Added 'get' functions to atkPage for javascript and stylesheets. [Maurice]
+ Implemented reuse of handlers in atknode::getHandler method, which is also
  necessary when you want to save member vars before you use them at a later
  time in your pageload. [Maurice]
+ Added style class for atkShuttleRelation. [Angelo]
+ Added atkCaptchaAttribute for use with e.g guestbooks to prevent
  spam. [Nico]
+ Added m_displayShowAll var to atkNavigator, so you can configure if you
  want to show the 'show all' link in the navigation [Wim, Nico]